# tinyai

./: .gitignore  .gitmodules  CMakeLists.txt
experiments/SinglePole/: CMakeLists.txt  CartPoleDynamics-sim_cartpole.cpp  main.cpp  single-pole.cpp
experiments/racing/: CMakeLists.txt  best_network  level.cpp  main.cpp  physics.h  winner_network
experiments/xor/: CMakeLists.txt  xor.cpp
include/: Gene.hpp  Genotype.hpp  InnovationContainer.hpp  MutationRateContainer.hpp  NeatPool.hpp  NetworkInfoContainer.hpp  NeuralNet.hpp  NeuralNetFast.hpp  SpeciatingParameterContainer.hpp  Specie.hpp  detail.hpp  strong_typedef.hpp  tinyann.hpp  tinyneat.hpp
include/Phenotypes/: IPhenotype.hpp  InitializationKit.hpp  NeuralNetFastSerialRecurrent.cpp  NeuralNetFastSerialRecurrent.hpp  NeuralNetNaive.cpp  NeuralNetNaive.hpp  NeuralNetNaiveRecurrent.cpp  NeuralNetNaiveRecurrent.hpp  Neuron.hpp
include/tinyai/: Genotype.hpp  InnovationContainer.hpp  NeatPool.hpp  NeuralNet.hpp  NeuralNetFast.hpp  Specie.hpp  tinyann.hpp  tinyneat.hpp
include/tinyai/Phenotypes/: IPhenotype.hpp  InitializationKit.hpp  NeuralNetFastSerialRecurrent.cpp  NeuralNetFastSerialRecurrent.hpp  NeuralNetNaive.cpp  NeuralNetNaive.hpp  NeuralNetNaiveRecurrent.cpp  NeuralNetNaiveRecurrent.hpp
src/: Gene.cpp  Genotype.cpp  InitializationKit.cpp  InnovationContainer.cpp  MutationRateContainer.cpp  NeatPool.cpp  NetworkInfoContainer.cpp  NeuralNet.cpp  NeuralNetFast.cpp  Neuron.cpp  SpeciatingParameterContainer.cpp  Specie.cpp
src/tinyai/: Gene.cpp  Genotype.cpp  InitializationKit.cpp  InnovationContainer.cpp  MutationRateContainer.cpp  NeatPool.cpp  NetworkInfoContainer.cpp  NeuralNet.cpp  NeuralNetFast.cpp  Neuron.cpp  SpeciatingParameterContainer.cpp  Specie.cpp
test/: CMakeLists.txt  NeuralNetFast.cpp
